# LeanMindAI

./: README.md  docker-compose.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/app/: __init__.py  config.py  db.py  main.py  models.py  rag.py  safety.py  schemas.py  security.py
apps/api/app/agents/: __init__.py  behavioral.py
apps/api/app/routers/: admin.py  auth.py  chat.py  users.py
apps/web/: Dockerfile  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/[locale]/: layout.tsx  page.tsx
apps/web/src/app/[locale]/admin/ingest/: page.tsx
apps/web/src/app/[locale]/chat/: page.tsx
apps/web/src/app/[locale]/dashboard/: page.tsx
apps/web/src/app/[locale]/onboarding/: page.tsx
apps/web/src/app/[locale]/signin/: page.tsx
apps/web/src/app/[locale]/signup/: page.tsx
apps/web/src/components/: auth-form.tsx  navbar.tsx
apps/web/src/i18n/: messages.ts
apps/web/src/lib/: api.ts  auth-context.tsx
docs/: ARCHITECTURE.md  DEPLOYMENT.md  SAFETY.md
