[project]
name = "leanmind-api"
version = "0.1.0"
description = "LeanMind AI backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.17",
    "openai>=1.55.0",
    "qdrant-client>=1.12.0",
    "pypdf>=5.1.0",
    "tiktoken>=0.8.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.1",
    "email-validator>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM"]
# E501: line length handled by formatter
# B008: FastAPI Depends/File/Form/Query require call-in-default
# UP017/UP042: aesthetic nits, kept for compatibility with older Pythons
ignore = ["E501", "B008", "UP017", "UP042"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
